--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <h2>Samuel happiness Technical Onboarding</h2>
+    <h3>Just created my static web page</h3>
   </main>
 </body>
 
